--- a/rep-go-web/index.html
+++ b/rep-go-web/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html ng-app="repgo">
+<html data-ng-app="repgo">
   <head>
     <meta charset="utf-8">
     <title>Cadastro de usuário</title>
-
-    <style media="screen">
-      .adm{
-        color: red
-      }
-    </style>
   </head>
   <body>
 
-    <div ng-controller="UserController">
-      <form>
-        <h1>Usuário:</h1>
-        <input type="text" ng-model="user.nome">
+    <div data-ng-controller="UserController as userCtrl">
 
-        <button type="button" ng-click="add()">Add</button>
+      <form data-ng-submit="save(userCtrl.user)">
+        <label for="name">Name</label>
+        <input id="name" type="text" required
+               data-ng-model="userCtrl.user.name">
+
+        <br>
+        <label for="password">Password</label>
+        <input id="password" type="password" required
+               data-ng-model="userCtrl.user.password">
+
+        <br>
+        <label for="confirmPassword">Confirm</label>
+        <input id="confirmPassword" type="password" required
+               data-ng-model="userCtrl.user.confirmPassword">
+
+        <br>
+        <button type="submit" name="save">Save</button>
       </form>
 
-      <ul>
-        <li ng-show="usuarios.length == 0">Nenhum usuário inserido</li>
-        <li ng-repeat="usuario in usuarios" ng-class="{'adm': usuario.selecionado}">
-          {{ usuario.nome }}
-          <input type="checkbox" ng-model="usuario.selecionado">
-        </li>
-      </ul>
-
-      <button type="button" ng-click="removerSelecionados()">Remover Selecionados</button>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="src/js/app.js"></script>
-
+    <script src="src/js/config/api-config.js"></script>
+    <script src="src/js/services/user-service.js"></script>
+    <script src="src/js/controllers/user-controller.js"></script>
   </body>
 </html>
