--- a/rep-go-web/index.html
+++ b/rep-go-web/index.html
@@ -2,37 +2,55 @@
 <html data-ng-app="repgo">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+
+    <link rel="stylesheet" href="src/css/main.css">
+
     <title>Cadastro de usuário</title>
   </head>
   <body>
+    <header>
+      <nav data-ng-controller="MenuController as menuCtrl">
+        <md-content>
+          <md-toolbar>
+            <div class="md-toolbar-tools">
+              <md-button data-ng-click="toggle()">
+                Menu
+              </md-button>
 
-    <div data-ng-controller="UserController as userCtrl">
+              <h2>RepGO</h2>
+            </div>
+          </md-toolbar>
+        </md-content>
 
-      <form data-ng-submit="save(userCtrl.user)">
-        <label for="name">Name</label>
-        <input id="name" type="text" required
-               data-ng-model="userCtrl.user.name">
 
-        <br>
-        <label for="password">Password</label>
-        <input id="password" type="password" required
-               data-ng-model="userCtrl.user.password">
+        <md-sidenav class="md-sidenav-left" md-component-id="menu">
+          <a href="#/user/new">Add user</a>
+          <a href="#/users">Show users</a>
+        </md-sidenav>
 
-        <br>
-        <label for="confirmPassword">Confirm</label>
-        <input id="confirmPassword" type="password" required
-               data-ng-model="userCtrl.user.confirmPassword">
+      </nav>
+    </header>
 
-        <br>
-        <button type="submit" name="save">Save</button>
-      </form>
-
+    <div class="main-content" data-ng-view="">
+      <!-- Content -->
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-messages.min.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
     <script src="src/js/app.js"></script>
+    <script src="src/js/config/route-config.js"></script>
     <script src="src/js/config/api-config.js"></script>
     <script src="src/js/services/user-service.js"></script>
+    <script src="src/js/controllers/menu-controller.js"></script>
     <script src="src/js/controllers/user-controller.js"></script>
   </body>
 </html>
